// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MovieViewer > Snapshot Tests > should render MovieViewer with multiple movies 1`] = `
<section
  aria-label="Movie Viewer"
  class="movie-viewer"
>
  <section
    aria-label="Filters"
    class="filter-panel"
  >
    <header
      class="filter-header"
    >
      <h2
        class="filter-title"
      >
        Filters
      </h2>
      <section
        class="filter-actions"
      >
        <button
          aria-disabled="true"
          class="filter-reset-btn"
          disabled=""
          type="button"
        >
          Clear filters
        </button>
      </section>
    </header>
    <form
      class="filter-grid"
    >
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
          for="genre-select"
        >
          Genre
        </label>
        <select
          class="filter-select"
          id="genre-select"
        >
          <option
            value=""
          >
            Any
          </option>
        </select>
      </fieldset>
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
          for="year-select"
        >
          Year
        </label>
        <select
          class="filter-select"
          id="year-select"
        >
          <option
            value=""
          >
            Any
          </option>
          <option
            value="2023"
          >
            2023
          </option>
        </select>
      </fieldset>
      <fieldset
        class="filter-control filter-control-rating"
      >
        <label
          class="filter-label"
        >
          Rating
        </label>
        <div
          class="dual-range-slider"
        >
          <div
            class="slider-track"
          />
          <div
            class="slider-range"
            style="left: calc(22px + 0 * (100% - 44px)); width: calc(1 * (100% - 44px));"
          />
          <input
            aria-label="Minimum rating"
            class="range-min"
            max="10"
            min="0"
            step="0.5"
            type="range"
            value="0"
          />
          <input
            aria-label="Maximum rating"
            class="range-max"
            max="10"
            min="0"
            step="0.5"
            type="range"
            value="10"
          />
          <div
            class="range-values"
          >
            <span
              class="range-value"
            >
              Min: 
              0.0
            </span>
            <span
              class="range-value"
            >
              Max: 
              10.0
            </span>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
          for="sort-by"
        >
          Sort by
        </label>
        <select
          class="filter-select"
          id="sort-by"
        >
          <option
            value="popularity"
          >
            Popularity
          </option>
          <option
            value="rating"
          >
            Rating
          </option>
          <option
            value="release_date"
          >
            Release date
          </option>
          <option
            value="title"
          >
            Title
          </option>
        </select>
      </fieldset>
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
        >
          Order
        </label>
        <section
          class="order-toggle"
        >
          <button
            aria-pressed="false"
            class="order-btn "
            type="button"
          >
            Asc
          </button>
          <button
            aria-pressed="true"
            class="order-btn is-active"
            type="button"
          >
            Desc
          </button>
        </section>
      </fieldset>
    </form>
    <aside
      class="filter-active"
    >
      <small
        class="filter-hint"
      >
        No active filters
      </small>
    </aside>
  </section>
  <div
    class="search-container"
  >
    <div
      class="search-bar"
    >
      <input
        class="input-field"
        placeholder="Search for movies..."
        type="text"
        value=""
      />
    </div>
  </div>
  <aside
    class="movie-jump-controls"
  >
    <label
      class="jump-label"
      for="movie-select"
    >
      Jump to movie:
    </label>
    <select
      class="movie-select"
      id="movie-select"
    >
      <option
        value="0"
      >
        1
        . 
        Third Movie
      </option>
      <option
        value="1"
      >
        2
        . 
        First Movie
      </option>
      <option
        value="2"
      >
        3
        . 
        Second Movie
      </option>
    </select>
  </aside>
  <main
    class="movie-display"
  >
    <article
      class="movie-card movie-card--large"
    >
      <figure
        class="image-container"
      >
        <img
          alt="Third Movie poster"
          class="image"
          loading="lazy"
          src="mocked-image-url"
        />
      </figure>
      <section
        class="content"
      >
        <header
          class="header"
        >
          <h2
            class="title"
          >
            Third Movie
          </h2>
          <aside
            class="meta"
          >
            <time
              class="year"
              datetime="2023-10-01"
            >
              2023
            </time>
            <span
              aria-label="Rating: 9.1 out of 10"
              class="rating"
            >
              ★ 
              9.1
              /10
            </span>
          </aside>
        </header>
        <section
          class="overview-container"
        >
          <p
            class="overview "
          >
            Third movie description
          </p>
        </section>
      </section>
    </article>
  </main>
  <aside
    class="keyboard-hint"
  >
    <p>
      Use ← → arrow keys to navigate
    </p>
  </aside>
  <nav
    aria-label="Movie navigation"
    class="movie-nav-controls"
  >
    <button
      aria-label="Previous movie"
      class="nav-btn nav-btn--prev"
    >
      ← Previous
    </button>
    <aside
      class="movie-position"
    >
      <span
        class="position-text"
      >
        1
         of 
        3
      </span>
    </aside>
    <button
      aria-label="Next movie"
      class="nav-btn nav-btn--next"
    >
      Next →
    </button>
  </nav>
</section>
`;

exports[`MovieViewer > Snapshot Tests > should render MovieViewer with no movies 1`] = `
<section
  aria-label="Movie Viewer"
  class="movie-viewer"
>
  <section
    aria-label="Filters"
    class="filter-panel"
  >
    <header
      class="filter-header"
    >
      <h2
        class="filter-title"
      >
        Filters
      </h2>
      <section
        class="filter-actions"
      >
        <button
          aria-disabled="true"
          class="filter-reset-btn"
          disabled=""
          type="button"
        >
          Clear filters
        </button>
      </section>
    </header>
    <form
      class="filter-grid"
    >
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
          for="genre-select"
        >
          Genre
        </label>
        <select
          class="filter-select"
          id="genre-select"
        >
          <option
            value=""
          >
            Any
          </option>
        </select>
      </fieldset>
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
          for="year-select"
        >
          Year
        </label>
        <select
          class="filter-select"
          id="year-select"
        >
          <option
            value=""
          >
            Any
          </option>
        </select>
      </fieldset>
      <fieldset
        class="filter-control filter-control-rating"
      >
        <label
          class="filter-label"
        >
          Rating
        </label>
        <div
          class="dual-range-slider"
        >
          <div
            class="slider-track"
          />
          <div
            class="slider-range"
            style="left: calc(22px + 0 * (100% - 44px)); width: calc(1 * (100% - 44px));"
          />
          <input
            aria-label="Minimum rating"
            class="range-min"
            max="10"
            min="0"
            step="0.5"
            type="range"
            value="0"
          />
          <input
            aria-label="Maximum rating"
            class="range-max"
            max="10"
            min="0"
            step="0.5"
            type="range"
            value="10"
          />
          <div
            class="range-values"
          >
            <span
              class="range-value"
            >
              Min: 
              0.0
            </span>
            <span
              class="range-value"
            >
              Max: 
              10.0
            </span>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
          for="sort-by"
        >
          Sort by
        </label>
        <select
          class="filter-select"
          id="sort-by"
        >
          <option
            value="popularity"
          >
            Popularity
          </option>
          <option
            value="rating"
          >
            Rating
          </option>
          <option
            value="release_date"
          >
            Release date
          </option>
          <option
            value="title"
          >
            Title
          </option>
        </select>
      </fieldset>
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
        >
          Order
        </label>
        <section
          class="order-toggle"
        >
          <button
            aria-pressed="false"
            class="order-btn "
            type="button"
          >
            Asc
          </button>
          <button
            aria-pressed="true"
            class="order-btn is-active"
            type="button"
          >
            Desc
          </button>
        </section>
      </fieldset>
    </form>
    <aside
      class="filter-active"
    >
      <small
        class="filter-hint"
      >
        No active filters
      </small>
    </aside>
  </section>
  <div
    class="search-bar"
  >
    <input
      class="input-field"
      placeholder="Search for movies..."
      type="text"
      value=""
    />
  </div>
  <p
    class="no-movies"
  >
    No movies available
  </p>
</section>
`;

exports[`MovieViewer > Snapshot Tests > should render MovieViewer with single movie 1`] = `
<section
  aria-label="Movie Viewer"
  class="movie-viewer"
>
  <section
    aria-label="Filters"
    class="filter-panel"
  >
    <header
      class="filter-header"
    >
      <h2
        class="filter-title"
      >
        Filters
      </h2>
      <section
        class="filter-actions"
      >
        <button
          aria-disabled="true"
          class="filter-reset-btn"
          disabled=""
          type="button"
        >
          Clear filters
        </button>
      </section>
    </header>
    <form
      class="filter-grid"
    >
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
          for="genre-select"
        >
          Genre
        </label>
        <select
          class="filter-select"
          id="genre-select"
        >
          <option
            value=""
          >
            Any
          </option>
        </select>
      </fieldset>
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
          for="year-select"
        >
          Year
        </label>
        <select
          class="filter-select"
          id="year-select"
        >
          <option
            value=""
          >
            Any
          </option>
          <option
            value="2023"
          >
            2023
          </option>
        </select>
      </fieldset>
      <fieldset
        class="filter-control filter-control-rating"
      >
        <label
          class="filter-label"
        >
          Rating
        </label>
        <div
          class="dual-range-slider"
        >
          <div
            class="slider-track"
          />
          <div
            class="slider-range"
            style="left: calc(22px + 0 * (100% - 44px)); width: calc(1 * (100% - 44px));"
          />
          <input
            aria-label="Minimum rating"
            class="range-min"
            max="10"
            min="0"
            step="0.5"
            type="range"
            value="0"
          />
          <input
            aria-label="Maximum rating"
            class="range-max"
            max="10"
            min="0"
            step="0.5"
            type="range"
            value="10"
          />
          <div
            class="range-values"
          >
            <span
              class="range-value"
            >
              Min: 
              0.0
            </span>
            <span
              class="range-value"
            >
              Max: 
              10.0
            </span>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
          for="sort-by"
        >
          Sort by
        </label>
        <select
          class="filter-select"
          id="sort-by"
        >
          <option
            value="popularity"
          >
            Popularity
          </option>
          <option
            value="rating"
          >
            Rating
          </option>
          <option
            value="release_date"
          >
            Release date
          </option>
          <option
            value="title"
          >
            Title
          </option>
        </select>
      </fieldset>
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
        >
          Order
        </label>
        <section
          class="order-toggle"
        >
          <button
            aria-pressed="false"
            class="order-btn "
            type="button"
          >
            Asc
          </button>
          <button
            aria-pressed="true"
            class="order-btn is-active"
            type="button"
          >
            Desc
          </button>
        </section>
      </fieldset>
    </form>
    <aside
      class="filter-active"
    >
      <small
        class="filter-hint"
      >
        No active filters
      </small>
    </aside>
  </section>
  <div
    class="search-container"
  >
    <div
      class="search-bar"
    >
      <input
        class="input-field"
        placeholder="Search for movies..."
        type="text"
        value=""
      />
    </div>
  </div>
  <aside
    class="movie-jump-controls"
  >
    <label
      class="jump-label"
      for="movie-select"
    >
      Jump to movie:
    </label>
    <select
      class="movie-select"
      disabled=""
      id="movie-select"
    >
      <option
        value="0"
      >
        1
        . 
        First Movie
      </option>
    </select>
  </aside>
  <main
    class="movie-display"
  >
    <article
      class="movie-card movie-card--large"
    >
      <figure
        class="image-container"
      >
        <img
          alt="First Movie poster"
          class="image"
          loading="lazy"
          src="mocked-image-url"
        />
      </figure>
      <section
        class="content"
      >
        <header
          class="header"
        >
          <h2
            class="title"
          >
            First Movie
          </h2>
          <aside
            class="meta"
          >
            <time
              class="year"
              datetime="2023-12-25"
            >
              2023
            </time>
            <span
              aria-label="Rating: 8.5 out of 10"
              class="rating"
            >
              ★ 
              8.5
              /10
            </span>
          </aside>
        </header>
        <section
          class="overview-container"
        >
          <p
            class="overview "
          >
            First movie description that is long enough to test truncation behavior
          </p>
        </section>
      </section>
    </article>
  </main>
  <aside
    class="keyboard-hint"
  >
    <p>
      Use ← → arrow keys to navigate
    </p>
  </aside>
  <nav
    aria-label="Movie navigation"
    class="movie-nav-controls"
  >
    <button
      aria-label="Previous movie"
      class="nav-btn nav-btn--prev"
      disabled=""
    >
      ← Previous
    </button>
    <aside
      class="movie-position"
    >
      <span
        class="position-text"
      >
        1
         of 
        1
      </span>
    </aside>
    <button
      aria-label="Next movie"
      class="nav-btn nav-btn--next"
      disabled=""
    >
      Next →
    </button>
  </nav>
</section>
`;
